--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
             background-color: #0F0F0F;
 	    font-size: large;
 	    text-align: center;
-        }
+	    margin: 0 auto;
+	    width: 600px;
+	}
 
 	.sliders {
 		padding: 15px;
@@ -28,6 +30,38 @@
 	pre {
 		color: lightgrey;
 		background-color: darkgreen;
+		margin-left: auto;
+		margin-right: auto;	
+	}
+	.slider {
+	  -webkit-appearance: none;
+	  width: 100%;
+	  height: 25px;
+	  background: #d3d3d3;
+	  outline: none;
+	  opacity: 0.7;
+	  -webkit-transition: .2s;
+	  transition: opacity .2s;
+	}
+
+	.slider:hover {
+	  opacity: 1;
+	}
+
+	.slider::-webkit-slider-thumb {
+	  -webkit-appearance: none;
+	  appearance: none;
+	  width: 25px;
+	  height: 25px;
+	  background: #04AA6D;
+	  cursor: pointer;
+	}
+
+	.slider::-moz-range-thumb {
+	  width: 25px;
+	  height: 25px;
+	  background: #04AA6D;
+	  cursor: pointer;
 	}
     </style>
 </head>
@@ -112,7 +146,7 @@
 
 	    <p style="background-color: brown">
 	    Thanks for taking a look.  If you want to see the code it's on
-	    <a href="http://www.github.com/aberkan/covidendgame">github</a>
+	    <a href="http://www.github.com/aberkan/endgame">github</a>
 	    and if you want to follow me in case I build more cool things I'm on
 	    <a href="http://www.twitter.com/berkan">twitter</a>
 	    </p>
