--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@
     <h1>Covid Endgame</h1>
     <hr>
 
+    <h3>If Covid keeps spreading until we hit immunity</h3>
+    <span id="noHerd"></span>
+
     <table class="leaders">
-	    <h3>If Covid keeps spreading until we hit immunity</h3>
 	    <tr>
 		    <td class="bignums">
 			    <span id="bigUnvaxSickPctOut"></span>%</td>
