--- a/index.html
+++ b/index.html
@@ -6,80 +6,88 @@
         body {
             color: #FFFFFF;
             background-color: #0F0F0F;
-	    font-size: large;
-	    text-align: center;
-	    margin: 0 auto;
-	    max-width: 700px;
-	}
+            font-size: large;
+            text-align: center;
+            margin: 0 auto;
+            max-width: 700px;
+        }
 
-	.sliders {
-		padding: 15px;
-		background-color: darkred;
-	}
-	.results{
-		text-align: center;
-	}	
+        .sliders {
+            padding: 15px;
+            background-color: darkred;
+        }
 
-	table {
-		background-color: gray;
-		border-collapse: collapse;
-		margin-left: auto;
-		margin-right: auto;	
-	}
-	th, td{
-		border: 1px solid black;
-		padding: 15px;
-		text-align: left;
-		min-width: 70px;
-	}
-	pre {
-		color: white;
-		background-color: darkgreen;
-		margin-left: auto;
-		margin-right: auto;	
-	}
-	.slider {
-	  -webkit-appearance: none;
-	  width: 100%;
-	  height: 25px;
-	  background: #d3d3d3;
-	  outline: none;
-	  opacity: 0.7;
-	  -webkit-transition: .2s;
-	  transition: opacity .2s;
-	}
+        .results {
+            text-align: center;
+        }
 
-	.slider:hover {
-	  opacity: 1;
-	}
+        table {
+            background-color: gray;
+            border-collapse: collapse;
+            margin-left: auto;
+            margin-right: auto;
+        }
 
-	.slider::-webkit-slider-thumb {
-	  -webkit-appearance: none;
-	  appearance: none;
-	  width: 25px;
-	  height: 25px;
-	  background: yellow;
-	  cursor: pointer;
-	}
+        th,
+        td {
+            border: 1px solid black;
+            padding: 15px;
+            text-align: left;
+            min-width: 70px;
+        }
 
-	.slider::-moz-range-thumb {
-	  width: 25px;
-	  height: 25px;
-	  background: #04AA6D;
-	  cursor: pointer;
-	}
-	.leaders{
-		font-size:x-large;
-		background-color:lightgrey;
-		color:black;
-	}
-	.bignums{
-		color:darkred;
-		font-weight:bold;
-	}
-	.explanation{
-		line-height:1.6;
-	}
+        pre {
+            color: white;
+            background-color: darkgreen;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .slider {
+            -webkit-appearance: none;
+            width: 100%;
+            height: 25px;
+            background: #d3d3d3;
+            outline: none;
+            opacity: 0.7;
+            -webkit-transition: .2s;
+            transition: opacity .2s;
+        }
+
+        .slider:hover {
+            opacity: 1;
+        }
+
+        .slider::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 25px;
+            height: 25px;
+            background: yellow;
+            cursor: pointer;
+        }
+
+        .slider::-moz-range-thumb {
+            width: 25px;
+            height: 25px;
+            background: #04AA6D;
+            cursor: pointer;
+        }
+
+        .leaders {
+            font-size: x-large;
+            background-color: lightgrey;
+            color: black;
+        }
+
+        .bignums {
+            color: darkred;
+            font-weight: bold;
+        }
+
+        .explanation {
+            line-height: 1.6;
+        }
     </style>
 </head>
 
@@ -92,101 +100,133 @@
     <span id="noHerd"></span>
 
     <table class="leaders">
-	    <tr>
-		    <td class="bignums">
-			    <span id="bigUnvaxSickPctOut"></span>%</td>
-		    <td> of unvaccinated people will catch Covid</td>
-	    </tr><tr>
-		    <td class="bignums"><span id="bigSickPctOut"></span>%</td>
-		    <td>of everyone will end up getting Covid<sup>*</sup></td>
-	    </tr><tr>
-		    <td class="bignums"><span id="bigVaxSickPctOut"></span>%</td>
-		    <td>of vaccinated people will get breakthrough Covid</td>
-	    </tr>
+        <tr>
+            <td class="bignums">
+                <span id="bigUnvaxSickPctOut"></span>%</td>
+            <td> of unvaccinated people will catch Covid</td>
+        </tr>
+        <tr>
+            <td class="bignums"><span id="bigSickPctOut"></span>%</td>
+            <td>of everyone will end up getting Covid<sup>*</sup></td>
+        </tr>
+        <tr>
+            <td class="bignums"><span id="bigVaxSickPctOut"></span>%</td>
+            <td>of vaccinated people will get breakthrough Covid</td>
+        </tr>
     </table>
     <p><sup>*</sup>not including people who get effectively vaccinated after they get sick</p>
 
 
     <div class="sliders">
-	    <h3>You can tweak the assumptions below and see who it will spread to</h3>
-	    <p>Final Vaccination Rate
-	    <input type="range" min="1" max="100" value="70" class="slider" id="vaxRate">	
-	    <span id="vaxRatePctOut"></span>%</p>
+        <h3>You can tweak the assumptions below and see who it will spread to</h3>
+        <p>Final Vaccination Rate
+            <input type="range" min="1" max="100" value="70" class="slider" id="vaxRate">
+            <span id="vaxRatePctOut"></span>%</p>
 
-	    <p>Vaccination effectiveness
-	    <input type="range" min="1" max="100" value="93" class="slider" id="vaxEff">	
-	    <span id="vaxEffPctOut"></span>%</p>
+        <p>Vaccination effectiveness
+            <input type="range" min="1" max="100" value="93" class="slider" id="vaxEff">
+            <span id="vaxEffPctOut"></span>%</p>
 
-	    <p>Final Variant Reproduction Number (Delta Variant is estimated to be R<sub>0</sub> = 6 to 8)<br>
-	    <input type="range" min="1" max="20" value="7" class="slider" id="reproRate">
-	    <table class="reproTable">
-		    <tr><td>Reproduction Number</td><td>R<sub>0</sub> = <span id="reproRateOut"></span></td></tr>
-		    <tr><td>Herd Immunity Threshold</td><td><span id="immunePctOut"></span>%</tr>
-	    </table>
-	    </p>
+        <p>Final Variant Reproduction Number (Delta Variant is estimated to be R<sub>0</sub> = 6 to 8)<br>
+            <input type="range" min="1" max="20" value="7" class="slider" id="reproRate">
+        <table class="reproTable">
+            <tr>
+                <td>Reproduction Number</td>
+                <td>R<sub>0</sub> = <span id="reproRateOut"></span></td>
+            </tr>
+            <tr>
+                <td>Herd Immunity Threshold</td>
+                <td><span id="immunePctOut"></span>%
+            </tr>
+        </table>
+        </p>
     </div>
 
     <h2>How it spreads</h2>
 
     <div class="results">
-	    <table id="resultsTable">
-		    <tr><td>Final Total Immune</td><td><span id="totalImmunePctOut"></span>%</td></tr>
-		    <tr><td>Reached Herd Immunity? </td><td><span id="herdOut"></span></td></tr>
-		    <tr><td>Immune because of Vaccination</td><td><span id="vaxImmunePctOut"></span>%</td></tr>
-		    <tr><td>Immune because they got sick</td><td><span id="sickPctOut"></span>%</td></tr>
+        <table id="resultsTable">
+            <tr>
+                <td>Final Total Immune</td>
+                <td><span id="totalImmunePctOut"></span>%</td>
+            </tr>
+            <tr>
+                <td>Reached Herd Immunity? </td>
+                <td><span id="herdOut"></span></td>
+            </tr>
+            <tr>
+                <td>Immune because of Vaccination</td>
+                <td><span id="vaxImmunePctOut"></span>%</td>
+            </tr>
+            <tr>
+                <td>Immune because they got sick</td>
+                <td><span id="sickPctOut"></span>%</td>
+            </tr>
 
-		    <tr><td>Chance of getting Sick if Unvaccinated</td><td><span id="unvaxSickPctOut"></span>%</td></tr>
-		    <tr><td>Chance of getting sick if Vaccinated</td><td><span id="vaxSickPctOut"></span>%</td></tr>
-	    </table>
+            <tr>
+                <td>Chance of getting Sick if Unvaccinated</td>
+                <td><span id="unvaxSickPctOut"></span>%</td>
+            </tr>
+            <tr>
+                <td>Chance of getting sick if Vaccinated</td>
+                <td><span id="vaxSickPctOut"></span>%</td>
+            </tr>
+        </table>
     </div>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2702244797160498" crossorigin="anonymous"></script>
+
     <div class="explanation">
-	    <hr>
-	    <h2>Explanation</h2>
-	    <p>
-	    This page makes the assumption that Covid will continue spreading
-	    until we reach herd immunity.  This is a reasonable assumption
-	    since so far we've seen that if R gets below 1 we relax
-	    restrictions until Covid starts spreading again (i.e. R > 1).  This
-	    will keep happening until R CAN'T be above 1 because we've reached
-	    herd immunity.
-	    </p><p>
-	    The herd immunity threshold is related to the reproduction rate:
-	    <pre>Immunne threshold = 1 - 1/R<sub>0</sub></pre>
-	    The delta variant is currently estimated at R=7 or 8.  Each variant
-	    has a been a bit better at spreading, so we may well find ourselves
-	    dealing with a higher R before this is over.
-	    </p><p>
-	    The percentage of folks who are immune is
-	    <pre>Immune = (%vax * vaxEffectivness) + %sick - %doubleSafe</pre>
-	    People who get sick AND then are vaccinated would count twice if we
-	    didn't account for them.  In the calculation above I DON'T include
-	    these people in the "Immune because they got sick" bucket (unless
-	    they also fall in the vaccine was ineffective bucket).
-	    </p><p>
-	    The percentage that get sick is
-	    <pre> 1 - Immunity Threshold</pre>
-	    and the total vulnerable is
-	    <pre> (1 - vaccinated) + (1 - vaxEffectiveness) * vaccinated </pre>
-	    </p>
-	    So the final equation for how likely you are to get sick if unvaccinated
-	    <pre> P(sick if unvaxed) = ((1 - 1/R<sub>0</sub>) - (vax%*vaxEff))/(1 - (vax%*vaxEff)) </pre>
-	    </p><p>
-	    As you can see from playing around with the sliders, getting to a
-	    high vaccination rate is very important if we want to prevent a lot
-	    of people from getting sick.  We also need to quickly stop Covid so
-	    we don't generate new variants with higher R<sub>0</sub>.
-	    </p>
+        <hr>
+        <h2>Explanation</h2>
+        <p>
+            This page makes the assumption that Covid will continue spreading
+            until we reach herd immunity. This is a reasonable assumption
+            since so far we've seen that if R gets below 1 we relax
+            restrictions until Covid starts spreading again (i.e. R > 1). This
+            will keep happening until R CAN'T be above 1 because we've reached
+            herd immunity.
+        </p>
+        <p>
+            The herd immunity threshold is related to the reproduction rate:
+        <pre>Immunne threshold = 1 - 1/R<sub>0</sub></pre>
+        The delta variant is currently estimated at R=7 or 8. Each variant
+        has a been a bit better at spreading, so we may well find ourselves
+        dealing with a higher R before this is over.
+        </p>
+        <p>
+            The percentage of folks who are immune is
+        <pre>Immune = (%vax * vaxEffectivness) + %sick - %doubleSafe</pre>
+        People who get sick AND then are vaccinated would count twice if we
+        didn't account for them. In the calculation above I DON'T include
+        these people in the "Immune because they got sick" bucket (unless
+        they also fall in the vaccine was ineffective bucket).
+        </p>
+        <p>
+            The percentage that get sick is
+        <pre> 1 - Immunity Threshold</pre>
+        and the total vulnerable is
+        <pre> (1 - vaccinated) + (1 - vaxEffectiveness) * vaccinated </pre>
+        </p>
+        So the final equation for how likely you are to get sick if unvaccinated
+        <pre> P(sick if unvaxed) = ((1 - 1/R<sub>0</sub>) - (vax%*vaxEff))/(1 - (vax%*vaxEff)) </pre>
+        </p>
+        <p>
+            As you can see from playing around with the sliders, getting to a
+            high vaccination rate is very important if we want to prevent a lot
+            of people from getting sick. We also need to quickly stop Covid so
+            we don't generate new variants with higher R<sub>0</sub>.
+        </p>
 
     </div>
 
     <div class="footer">
-	    <p style="background-color: brown">
-	    Thanks for taking a look.  If you want to see the code it's on
-	    <a href="http://www.github.com/aberkan/endgame">github</a>
-	    and if you want to follow me in case I build more cool things I'm on
-	    <a href="http://www.twitter.com/berkan">twitter</a>
-	    </p>
+        <p style="background-color: brown">
+            Thanks for taking a look. If you want to see the code it's on
+            <a href="http://www.github.com/aberkan/endgame">github</a>
+            and if you want to follow me in case I build more cool things I'm on
+            <a href="http://www.twitter.com/berkan">twitter</a>
+        </p>
 
     </div>
     <script src="sliders.js"></script>
